# OS_FinalProject

./: .gitignore  ProjectDescription.md  README.md
AMMS/: pyproject.toml  run.py
AMMS/amms/: __init__.py  config.json  config.py  models.py
AMMS/amms/main/: app.py  routes.py
AMMS/amms/medication/: forms.py  routes.py
AMMS/amms/reminders/: routes.py
AMMS/amms/static/: styles.css
AMMS/amms/templates/: index.html  layout.html  meds.html  newMedication.html  reminders.html
AMMS/amms/users/: forms.py  routes.py
AMMS/instance/: sqlite.db
