[tool.poetry]
name = "amms"
version = "0.1.0"
description = ""
authors = ["dharmikpatel <dharmik529@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
itsdangerous = "^2.1.2"
flask-bcrypt = "^1.0.1"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
